resiliency/limited/limited-envoy.yaml
static_resources:
  listeners:
  - address:
      socket_address:
        address: 0.0.0.0
        port_value: 80
    filter_chains:
    - filters:
      - name: envoy.http_connection_manager
        config:
          codec_type: auto
          stat_prefix: ingress_http
          access_log:
            - name: envoy.file_access_log
              config:
                path: "/var/log/access.log"
          route_config:
            name: local_route
            virtual_hosts:
            - name: limited
              domains:
              - "*"
              routes:
              - match:
                  prefix: "/airports"
                route:
                  cluster: limited_cluster
          http_filters:
          - name: envoy.fault
            config:
              abort:
                percent: 10
                http_status: 531
          - name: envoy.router
            config: {}
  clusters:
  - name: limited_cluster
    connect_timeout: 2s
    type: strict_dns
    lb_policy: round_robin
    hosts:
    - socket_address:
        address: filtered
        port_value: 80
    outlier_detection:
      consecutive_5xx: 2
      consecutive_gateway_failure: 2
      base_ejection_time: 30s

admin:
  access_log_path: "/dev/null"
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 8081
